--- a/tools/de.html
+++ b/tools/de.html
@@ -348,7 +348,8 @@
               <circle cx="90" cy="85" r="3" fill="#f59e0b"/>
               <circle cx="110" cy="35" r="3" fill="#ef4444"/>
               <circle cx="130" cy="52.5" r="3" fill="#ef4444"/>
-              <text x="40" y="105" fill="#94a3b8" font-family="monospace" font-size="7"><path d="M..."></text>
+              <text x="40" y="105" fill="#94a3b8" font-family="monospace" font-size="7">SVG</text>
+              <text x="80" y="105" fill="#94a3b8" font-family="monospace" font-size="7">DXF</text>
             </svg>
             <div class="tool-card-badge">
               <span class="rds-badge rds-badge-success">KOSTENLOS</span>
