--- a/en.html
+++ b/en.html
@@ -128,7 +128,7 @@
   </script>
 
   <!-- Stylesheet (imports design system) -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css?v=20260222">
 </head>
 <body>
 
@@ -627,6 +627,6 @@
     </div>
   </div>
 
-  <script src="js/script.js"></script>
+  <script src="js/script.js?v=20260222"></script>
 </body>
 </html>
