--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   </script>
 
   <!-- Stylesheet (imports design system) -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css?v=20260222">
 </head>
 <body>
 
@@ -694,6 +694,6 @@
     </div>
   </div>
 
-  <script src="js/script.js"></script>
+  <script src="js/script.js?v=20260222"></script>
 </body>
 </html>
