Fix: Add cache-busting to all tool pages

--- a/tools/de.html
+++ b/tools/de.html
@@ -91,7 +91,7 @@
   </script>
 
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/style.css?v=20260222">
   
   <style>
     /* Toolbox-specific styles */
