--- a/tools/image-compressor/index.html
+++ b/tools/image-compressor/index.html
@@ -66,7 +66,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
 
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="../../css/riplay-design-system.css">
+  <link rel="stylesheet" href="../../css/riplay-design-system.css?v=20260222">
   
   <style>
     /* Image Compressor specific styles */
@@ -613,6 +613,6 @@
     </div>
   </div>
 
-  <script src="app.js"></script>
+  <script src="app.js?v=20260222"></script>
 </body>
 </html>
