--- a/tools/index.html
+++ b/tools/index.html
@@ -91,7 +91,7 @@
   </script>
 
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/style.css?v=20260222">
   
   <style>
     /* Toolbox-specific styles */
