--- a/tools/pdf-toolkit/index.html
+++ b/tools/pdf-toolkit/index.html
@@ -66,7 +66,7 @@
   <script src="https://unpkg.com/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
 
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="../../css/riplay-design-system.css">
+  <link rel="stylesheet" href="../../css/riplay-design-system.css?v=20260222">
   
   <style>
     /* PDF Toolkit specific styles */
@@ -710,6 +710,6 @@
     </div>
   </div>
 
-  <script src="app.js"></script>
+  <script src="app.js?v=20260222"></script>
 </body>
 </html>
