--- a/tools/qr-studio/index.html
+++ b/tools/qr-studio/index.html
@@ -66,7 +66,7 @@
   <script src="https://cdn.jsdelivr.net/npm/qrcode-generator@1.4.4/qrcode.min.js"></script>
 
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="../../css/riplay-design-system.css">
+  <link rel="stylesheet" href="../../css/riplay-design-system.css?v=20260222">
   
   <style>
     /* QR Studio specific styles */
@@ -474,6 +474,6 @@
     </div>
   </div>
 
-  <script src="app.js"></script>
+  <script src="app.js?v=20260222"></script>
 </body>
 </html>
