--- a/tools/image-compressor/index.html
+++ b/tools/image-compressor/index.html
@@ -63,7 +63,7 @@
   </script>
 
   <!-- JSZip CDN for batch download -->
-  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js" integrity="sha384-+mbV2IY1Zk/X1p/nWllGySJSUN8uMs+gUAN10Or95UBH0fpj6GfKgPmgC5EXieXG" crossorigin="anonymous"></script>
 
   <!-- Stylesheet -->
   <link rel="stylesheet" href="../../css/riplay-design-system.css?v=20260222">
