--- a/tools/qr-studio/index.html
+++ b/tools/qr-studio/index.html
@@ -63,7 +63,7 @@
   </script>
 
   <!-- qrcode-generator CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/qrcode-generator@1.4.4/qrcode.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/qrcode-generator@1.4.4/qrcode.min.js" integrity="sha384-lQXOAyZwHXE55JFyrOMB7nY2Wv+m5ZWNtJcHrd1rceRQXAYNLak8ukN5TjBTcIwz" crossorigin="anonymous"></script>
 
   <!-- Stylesheet -->
   <link rel="stylesheet" href="../../css/riplay-design-system.css?v=20260222">
